--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
+  "projects": [],
+  "version": 2,
   "builds": [
-    { "src": "client/vite.config.ts", "use": "@vercel/static-build", "config": {} }
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/client/dist/$1" }
+    {
+      "src": "/(.*)",
+      "dest": "client/dist/index.html"
+    }
   ]
 }
